fixed divider spacing

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,6 @@
 /* About Section CSS Start */
 
 .about-section{
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
